--- a/src/components/sidebar/sidebar.component.scss
+++ b/src/components/sidebar/sidebar.component.scss
@@ -3,9 +3,25 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 240px;
+  width: 78px;
   background: #11101d;
   padding: 6px 14px;
+  transition: all 0.5s ease;
+
+  &.isActive{
+    width: 240px;
+  }
+
+  &.isActive .logo_content .logo{
+    opacity: 1;
+    pointer-events: none;
+  }
+
+  &.isActive .logo_content #btnSidebar{
+    left: 90%;
+  }
+
+
 
   .logo_content{
     color: #fff;
@@ -14,10 +30,13 @@
     width: 100%;
     align-items: center;
 
+
     .logo{
       display: flex;
       align-items: flex-end;
       width: 100%;
+      opacity: 0;
+      pointer-events: none;
       mat-icon{
         font-size: 28px;
         margin-right: 5px;
@@ -30,19 +49,29 @@
 
     #btnSidebar{
       position: absolute;
-      color: #fff;
-      left: 90%;
+      color: #11101d;
       top: 6px;
+      left: 50%;
       font-size: 20px;
-      height: 50px;
-      width: 50px;
+      height: 30px;
+      width: 30px;
       text-align: center;
       line-height: 50px;
       transform: translateX(-50%);
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
+  &.isActive .nav_list li .tooltip{
+    display: none;
+  }
+
+  &.isActive .nav_list li a .links_name{
+    opacity: 1;
+    pointer-events: auto;
+  }
   .nav_list{
     margin-top: 20px;
 
@@ -50,15 +79,15 @@
       position: relative;
       height: 50px;
       width: 100%;
-      margin: 0 5px;
       list-style: none;
       line-height: 50px;
 
       .tooltip{
         position: absolute;
+        display: block;
         left: 122px;
         top: 0;
-        transform: translateY(-50%);
+        transform: translate(-50%, -50%);
         border-radius: 6px;
         height: 35px;
         width: 122px;
@@ -85,6 +114,7 @@
         text-decoration: none;
         transition: all 0.4s ease;
         border-radius: 12px;
+        white-space: nowrap;
 
         &:hover{
           color: #11101d;
@@ -99,8 +129,28 @@
           line-height: 50px;
           text-align: center;
         }
+
+        .links_name{
+          opacity: 0;
+          pointer-events: none;
+          transition: all 0.5s ease;
+        }
       }
     }
+  }
+
+  &.isActive .profile_content .profile  .profile_details{
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  &.isActive .profile_content .profile{
+    background: #1d1b31;
+  }
+
+  &.isActive .profile_content .profile mat-icon{
+    left: 88%;
+    background: none;
   }
 
   .profile_content{
@@ -114,11 +164,14 @@
       position: relative;
       padding: 10px 6px;
       height: 60px;
-      background: #1d1b31;
+      background: none;
+      transition: all 0.4s ease;
 
       .profile_details{
         display: flex;
         align-items: center;
+        opacity: 0;
+        pointer-events: none;
 
         img{
           height: 45px;
@@ -140,15 +193,19 @@
             }
           }
         }
-
-        mat-icon {
-          position: absolute;
-          left: 88%;
-          transform: translateX(-50%);
-          min-width: 50px;
-          font-size: 25px;
-          border-radius: 12px;
-        }
+      }
+      mat-icon {
+        position: absolute;
+        bottom: 5px;
+        left: 50%;
+        transform: translateX(-50%);
+        min-width: 50px;
+        //line-height: 50px;
+        font-size: 20px;
+        border-radius: 12px;
+        text-align: center;
+        transition: all 0.4s ease;
+        background: #1d1b31;
       }
     }
   }
