--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,16 @@
   box-sizing: border-box;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 
+
 }
 body {
   position: relative;
   min-height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+button{
+  cursor: pointer;
 }
 
