--- a/src/components/sidebar/sidebar.component.scss
+++ b/src/components/sidebar/sidebar.component.scss
@@ -150,6 +150,13 @@ mat-toolbar{
           text-align: center;
         }
 
+        .iconSettings{
+          transition: all .5s ease-out;
+          &:hover{
+            transform: rotate(90deg);
+          }
+        }
+
         .links_name{
           opacity: 0;
           pointer-events: none;
@@ -243,11 +250,5 @@ mat-toolbar{
   width: calc(100% - 78px);
   left: 78px;
   transition: all 0.5s ease;
-
-  .text{
-    font-size: 25px;
-    font-weight: 500;
-    color: #1d1b31;
-    margin: 12px;
-  }
+  padding: 20px;
 }
