--- a/src/components/sidebar/sidebar.component.scss
+++ b/src/components/sidebar/sidebar.component.scss
@@ -20,6 +20,7 @@ mat-toolbar{
   background: #11101d;
   padding: 6px 14px;
   transition: all 0.5s ease;
+  z-index: 9999;
 
   &.isActive{
     width: 240px;
