--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,10 @@ button{
   cursor: pointer;
 }
 
+.mat-snack-bar-container{
+  background-color: #74CC87;
+  color: #fff;
+  span{
+    text-align: center;
+  }
+}
