--- a/src/components/input/input.component.html
+++ b/src/components/input/input.component.html
@@ -1,4 +1,6 @@
 <div class="form-field" #variavelqlq>
   <label [ngClass]="focused ? 'label-focused' : ''">{{label}}</label>
-  <input [type]="type" (focus)="focused = true" (blur)="onBlur($event)"/>
+  <input (focus)="focused = true" (blur)="onBlur($event)" [value]="jsonString" (change)="onChange($event)"/>
+  <!--ng-content></-ng-content-->
+   <span>{{errorMessage}}</span>
 </div>
