--- a/src/app/page/user/user-create/user-create.component.html
+++ b/src/app/page/user/user-create/user-create.component.html
@@ -1,22 +1,50 @@
 <mat-card>
   {{f.valid}}
   {{f.value | json}}
+<br/>
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <!--input-component label="Ativo" type="checkbox"><input-component-->
-    <!--<input-component label="Nome" [(ngModel)]="user.name" [name]="user.name"></input-component>
-    <input-component label="E-mail"  ngModel name="email"></input-component>
-    <input-component-- label="Senha" type="password"  ngModel name="password"></input-component-->
-    <input-component label="Confirma Senha" name="passConfirm" [(ngModel)]="user.passConfirm">
-    <!--input  name="passConfirm" ngModel required minlength="4" autocomplete="off"/-->
-    </input-component>
-    <input type="text" ngModel required name="nome">
-    <input type="email" ngModel required name="email">
-    <input type="password" ngModel required name="password" autocomplete="new-password">
-    <input type="password" ngModel required name="passConfirm">
- </form>
- <button type="submit" mat-raised-button color="success" (click)="createUser()">
-   <mat-icon>save</mat-icon>Salvar
- </button>
- <button mat-raised-button color="warn">Cancelar</button>
+    <input-component
+      label="Nome"
+      [(ngModel)]="user.name"
+      name="name"
+      required
+      errorMessage="O campo Nome é obrigatório!"
+    ></input-component>
+    <input-component
+      label="E-mail"
+      [(ngModel)]="user.email"
+      type="email"
+      required
+      ngModel
+      name="email"
+      errorMessage="O campo E-mail dever ser válido"
+    ></input-component>
+    <input-component
+      label="Senha"
+      [(ngModel)]="user.password"
+      type="password"
+      required
+      ngModel
+      name="password"
+      errorMessage="O campo Senha é obrigatório!"
+    ></input-component>
+    <input-component
+      label="Confirma Senha"
+      [(ngModel)]="user.passConfirm"
+      required
+      name="passConfirm"
+      type="password"
+      errorMessage="As senhas devem ser iguais!"
+    ></input-component>
+  </form>
+  <button
+    type="submit"
+    mat-raised-button
+    color="success"
+    (click)="createUser()"
+  >
+    <mat-icon>save</mat-icon>Salvar
+  </button>
+  <button mat-raised-button color="warn">Cancelar</button>
 </mat-card>
-
