--- a/src/components/input/input.component.scss
+++ b/src/components/input/input.component.scss
@@ -1,8 +1,16 @@
+
 .form-field{
   position: relative;
   margin-bottom: 1rem;
   height: 50px;
   width: 300px;
+
+  display: flex;
+  align-items: center;
+
+  .nf-invalid.ng-touched{
+    border: 2px solid #46a6ff;
+  }
 
   label{
     position: absolute;
@@ -18,8 +26,7 @@
     position: relative;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
+    //width: 100%;
     font-size: 17px;
     font-weight: 600;
     border: 2px solid #e7ebee;
@@ -29,6 +36,7 @@
     background: none;
     z-index: 1;
     color: #171c25;
+
   }
 
   input:focus{
@@ -36,8 +44,9 @@
 
   }
 
+
   .label-focused{
-    top: -.4rem;
+    top: -.8rem;
     left: 0.8rem;
     font-size: 14px;
     font-weight: 600;
@@ -45,4 +54,49 @@
     z-index: 10;
   }
 
+  .errorValidation{
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
+    cursor: pointer;
+
+    mat-icon{
+      color: #46a6ff;
+    }
+    .tooltipValition{
+
+      position: absolute;
+      display: block;
+      left: 30px;
+      padding: 5px 0;
+      width: 210px;
+      border-radius: 5px;
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+      transition: 0s;
+      color: #fff;
+      background: #46a6ff;
+      text-align: center;
+      opacity: 0;
+      pointer-events: none;
+
+      &::before {
+        content: '';
+        border-style: solid;
+        border-color: #46a6ff transparent;
+        border-width: 6px 6px 0 6px;
+        top: 40%;
+        position: absolute;
+        left: -7%;
+        transform: translateX(50%) rotate(90deg);
+      }
+    }
+    &:hover .tooltipValition{
+      transition: all 0.5s ease;
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
 }
+
