--- a/src/components/input/input.component.scss
+++ b/src/components/input/input.component.scss
@@ -1,4 +1,3 @@
-
 .form-field{
   position: relative;
   margin-bottom: 1rem;
@@ -8,8 +7,12 @@
   display: flex;
   align-items: center;
 
-  .nf-invalid.ng-touched{
+  .ng-touched{
     border: 2px solid #46a6ff;
+  }
+
+  .ng-invalid{
+    border: 2px solid #e7eeea;
   }
 
   label{
@@ -43,7 +46,6 @@
     border-color: #00B7CE;
 
   }
-
 
   .label-focused{
     top: -.8rem;
