--- a/src/components/input/input.component.scss
+++ b/src/components/input/input.component.scss
@@ -7,12 +7,8 @@
   display: flex;
   align-items: center;
 
-  .ng-touched{
-    border: 2px solid #46a6ff;
-  }
-
   .ng-invalid{
-    border: 2px solid #e7eeea;
+    border: 2px solid #46a6ff;
   }
 
   label{
@@ -39,6 +35,7 @@
     background: none;
     z-index: 1;
     color: #171c25;
+    text-transform: uppercase;
 
   }
 
@@ -54,7 +51,8 @@
     font-weight: 600;
     background-color: #fff;
     z-index: 10;
-  }
+    }
+
 
   .errorValidation{
     position: relative;
