--- a/src/components/input/input.component.scss
+++ b/src/components/input/input.component.scss
@@ -2,8 +2,6 @@
   position: relative;
   margin-bottom: 1rem;
   height: 50px;
-  width: 300px;
-
   display: flex;
   align-items: center;
 
@@ -25,7 +23,7 @@
     position: relative;
     top: 0;
     left: 0;
-    //width: 100%;
+    width: 100%;
     font-size: 17px;
     font-weight: 600;
     border: 2px solid #e7ebee;
