--- a/src/components/switch-toggle/switch-toggle.component.html
+++ b/src/components/switch-toggle/switch-toggle.component.html
@@ -1,10 +1,9 @@
-<div class="card-body p-4 text-center">
-  <p class="custom-control custom-switch">
-      <input class="custom-control-input" id="customSwitch1" type="checkbox" checked>
-      <label class="custom-control-label font-italic" for="customSwitch1">on / off</label>
-  </p>
-  <p class="custom-control custom-switch m-0">
-      <input class="custom-control-input" id="customSwitch2" type="checkbox">
-      <label class="custom-control-label font-italic" for="customSwitch2">on / off</label>
-  </p>
+
+<div class="switchContainer" #teste>
+  {{label}}
+  <label class="switch">
+
+    <input (change)="onChange($event)" [checked]="isChecked" type="checkbox">
+    <span class="slider"></span>
+  </label>
 </div>
