--- a/src/components/switch-toggle/switch-toggle.component.html
+++ b/src/components/switch-toggle/switch-toggle.component.html
@@ -1,9 +1,13 @@
-
-<div class="switchContainer" #teste>
-  {{label}}
+<div class="switchContainer" [class.displayLabel]="!switchCheck.value" #displayLabel>
+  {{ label }}
   <label class="switch">
-
-    <input (change)="onChange($event)" [checked]="isChecked" type="checkbox">
+    <input
+      (change)="onChange($event)"
+      [checked]="isChecked"
+      type="checkbox"
+      [(ngModel)]="value"
+      #switchCheck="ngModel"
+    />
     <span class="slider"></span>
   </label>
 </div>
