--- a/src/components/switch-toggle/switch-toggle.component.scss
+++ b/src/components/switch-toggle/switch-toggle.component.scss
@@ -7,7 +7,7 @@
     font-weight: 600;
 
 
-    &.teste{
+    &.displayLabel{
       font-weight: 400;
       color: #ccc;
       transition: all .4s;
