--- a/src/app/page/user/user-create/user-create.component.html
+++ b/src/app/page/user/user-create/user-create.component.html
@@ -1,57 +1,71 @@
-<mat-card>
-<strong>Informe os dados do usuário.</strong>
+<header-component ></header-component>
+<div class="container">
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <strong>Informe os dados do usuário.</strong>
     <div class="rowHeader">
-      <switch-component label="Ativo"></switch-component>
+      <switch-component
+        label="Ativo"
+        name="status"
+        [(ngModel)]="user.active"
+      ></switch-component>
       <div class="col-500">
         <input-component
-        label="Nome"
-        [(ngModel)]="user.name"
-        name="name"
-        required
-        errorMessage="O campo Nome é obrigatório!"
+          label="Nome"
+          [(ngModel)]="user.name"
+          name="name"
+          required
+          errorMessage="O campo Nome é obrigatório!"
         ></input-component>
         <input-component
-        label="E-mail"
-        [(ngModel)]="user.email"
-        type="email"
-        required
-        [email]="true"
-        ngModel
-        name="email"
-        errorMessage="O campo E-mail dever ser válido"
-      ></input-component>
+          label="E-mail"
+          [(ngModel)]="user.email"
+          type="email"
+          required
+          [email]="true"
+          ngModel
+          name="email"
+          errorMessage="O campo E-mail dever ser válido"
+        ></input-component>
       </div>
     </div>
     <div class="col-200">
       <input-component
-      label="Senha"
-      name="password"
-      type="password"
-      [(ngModel)]="user.password"
-      required
-      ngModel
-      errorMessage="O campo Senha é obrigatório!"
-    ></input-component>
-    <input-component
-      label="Confirma Senha"
-      name="passConfirm"
-      type="password"
-      [(ngModel)]="user.passConfirm"
-      required
-      ngModel
-      errorMessage="As senhas devem ser iguais!"
-    ></input-component>
+        label="Senha"
+        name="password"
+        type="password"
+        [(ngModel)]="user.password"
+        required
+        ngModel
+        errorMessage="O campo Senha é obrigatório!"
+      ></input-component>
+      <input-component
+        label="Confirma Senha"
+        name="passConfirm"
+        type="password"
+        [(ngModel)]="user.passConfirm"
+        required
+        ngModel
+        style="width: 100%"
+        errorMessage="As senhas devem ser iguais!"
+      ></input-component>
     </div>
-    <label style="color: #ccc">{{ user.dateAtCreate | date: 'dd/MM/yyyy' }} </label>
-  </form>
-  <button
+    <label style="color: #ccc"
+      >{{ user.dateAtCreate | date: "dd/MM/yyyy" }}
+    </label>
+    <button
     type="submit"
     mat-raised-button
-    color="success"
-    (click)="createUser()"
+    style="background-color: #161d34; color: #fff"
+    (click)="userSubmit()"
   >
-    <mat-icon>save</mat-icon>Salvar
+    Salvar
   </button>
-  <button mat-raised-button color="warn" (click)="cancel()">Cancelar</button>
-</mat-card>
+  <button
+    mat-raised-button
+    style="background-color: #fff; margin-left: 10px"
+    (click)="cancel()"
+  >
+    Cancelar
+  </button>
+  </form>
+</div>
