--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
+    <button mat-stroked-button (click)="navegateTicketCreate()">
+      <mat-icon >add</mat-icon>
+        Novo
+    </button>
 </mat-toolbar>
