--- a/src/components/input/input.component.scss
+++ b/src/components/input/input.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
 
-  .ng-invalid{
+  .ng-touched, .ng-invalid {
     border: 2px solid #46a6ff;
   }
 
@@ -23,7 +23,7 @@
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 500px;
     font-size: 17px;
     font-weight: 600;
     border: 2px solid #e7ebee;
@@ -47,7 +47,7 @@
     left: 0.8rem;
     font-size: 14px;
     font-weight: 600;
-    background-color: #fff;
+    background-color: #f9fbff;
     z-index: 10;
     }
 
@@ -58,6 +58,7 @@
     align-items: center;
     margin-left: 1rem;
     cursor: pointer;
+    z-index: 99;
 
     mat-icon{
       color: #46a6ff;
