--- a/src/app/page/ticket/ticket.component.scss
+++ b/src/app/page/ticket/ticket.component.scss
@@ -3,11 +3,11 @@
   height: 100vh;
   background: #e1e5ee;
   .content{
-    padding: 20px;
+    padding: 20px 0;
     margin: none auto;
     background: #f9fbff;
 
-    table.tableHeader{
+    table {
       table-layout: fixed;
       border-collapse: collapse;
       width: 100%;
@@ -16,8 +16,246 @@
       thead{
         background-color: #f5f7f9;
         padding: 10px;
+
+        tr{
+
+          .lt-column{
+            display: table-cell;
+            padding: 15px 15px 15px 0;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            text-align: left;
+
+          }
+          th:first-child{
+            padding-right: 0;
+            padding-left: 10px;
+            border-radius: 3px 0 0;
+          }
+          th:nth-child(2){
+            padding-left: 0;
+          }
+
+          th:last-child{
+            border-radius: 0 3px 0 0;
+          }
+        }
+      }
+
+      tbody{
+        background: #fff;
+        transition: .3s opacity ease-in-out;
+
+        tr{
+
+          td{
+            vertical-align: middle;
+            display: table-cell;
+            padding: 15px 15px 15px 0;
+
+           .description{
+              color: #11344D;
+              font-weight: 500;
+              text-decoration: none;
+
+              &:hover{
+                color: #179be7;
+              }
+
+              &:hover .activeTicket{
+                opacity: 1;
+                transform: translateY(5px);
+                pointer-events: initial;
+                position: initial;
+              }
+
+            }
+
+
+            .idTicket{
+              font-size: 12px;
+              font-weight: 400;
+              color: #a2a5a7;
+            }
+
+            div span.tag{
+              border-radius: 4px;
+              padding: 2px 10px;
+              font-size: 12px;
+              font-weight: 500;
+            }
+
+            /*div .stateTicket{
+              background-color: #ffecf0;
+              color: #c82124;
+              border: 1px solid #ffd0d6;
+            }*/
+
+            div .stateTicket{
+             background-color: #c7ddfc;
+              color: #179be7;
+              border: 1px solid #a3bffd;
+            }
+
+
+            .listPriority{
+              display: block;
+              position: absolute;
+              padding: 8px;
+              min-width: 120px;
+              border-radius: 5px;
+              border: none;
+              background-color: #fff;
+              box-shadow: 0 5px 18px 0 rgb(222 225 225 / 40%), 0 6px 13px 0 rgb(0 0 0 / 8%);
+              opacity: 0;
+              transition: all .3s ease;
+              pointer-events: none;
+
+              &.activeList{
+                opacity: 1;
+                transform: translateY(5px);
+                pointer-events: initial;
+              }
+
+              ul{
+                list-style: none;
+
+                &:first-child{
+                  background-color: #e1f5fe;
+                  color:#179be7;
+                }
+
+                li{
+                  padding: 7px 30px 7px 8px;
+                  border-radius: 4  px;
+                  line-height: 1.3;
+                  margin: 5px 0;
+                  font-size: 14px;
+                  cursor: pointer;
+
+                  &:hover{
+                    background-color: #eef1f6;
+                  }
+
+                  .colorPriority{
+                    display: inline-block;
+                    background-color: #11344D;
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 2px;
+                    margin-right: 5px;
+                  }
+                }
+              }
+            }
+
+            .listStatus{
+              overflow-y: auto;
+              max-width: 140px;
+              max-height: 170px;
+              position: absolute;
+              padding: 8px;
+              border-radius: 5px;
+              border: none;
+              background-color: #fff;
+              box-shadow: 0 5px 18px 0 rgb(222 225 225 / 40%), 0 6px 13px 0 rgb(0 0 0 / 8%);
+              opacity: 0;
+              transition: all .3s ease;
+              pointer-events: none;
+
+              &::-webkit-scrollbar{
+                width: 5px;
+              }
+              &::-webkit-scrollbar-track {
+                background: #f1f1f1;
+              }
+              &::-webkit-scrollbar-thumb {
+                background: #888;
+              }
+              &::-webkit-scrollbar-thumb:hover {
+                background: #555;
+              }
+
+              &.activeListStatus{
+                opacity: 1;
+                transform: translateY(5px);
+                pointer-events: initial;
+              }
+
+              ul{
+                list-style: none;
+
+                li{
+                  padding: 7px 30px 7px 8px;
+                  border-radius: 4  px;
+                  line-height: 1.3;
+                  margin: 5px 0;
+                  font-size: 14px;
+                  cursor: pointer;
+
+                  &:hover{
+                    background-color: #eef1f6;
+                  }
+                }
+              }
+            }
+
+          }
+          td:first-child{
+            padding-right: 0;
+            padding-left: 17px;
+            padding-top: 8px;
+
+              &::before{
+                content: "";
+                position: absolute;
+                width: 2px;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                background-color: #95a3af;
+                transition: 10ms linear;
+                border-radius: 2px 0 0 2px
+              }
+            }
+            td:nth-child(2){
+              padding-left: 0;
+            }
+
+            td:last-child{
+              border-radius: 0 3px 0 0;
+            }
+          }
+        }
       }
     }
   }
 
+tooltip-component{
+  position: absolute;
+  display: block;
+  padding: 5px 0;
+  width: 500px;
+  border-radius: 5px;
+  border: 1px solid #cfd7df;
+  box-shadow: 0 5px 18px 0 rgb(222 225 225 / 40%), 0 6px 13px 0 rgb(0 0 0 / 8%);
+  transition: 0s;
+  background-color: #fff;
+  text-align: center;
+  opacity: 1;
+  pointer-events: none;
+  z-index: 10;
+
+  &::before {
+    content: '';
+    left: 0px;
+    top: -5px;
+    border-style: solid;
+    border-bottom-color: 1px solid #cfd7df;
+    border-color: #fff  transparent;
+    border-width: 6px 6px 0 6px;
+    position: absolute;
+    transform: translateX(50%) rotate(180deg);
+  }
 }
