--- a/src/app/page/user/user.component.html
+++ b/src/app/page/user/user.component.html
@@ -1,48 +1,51 @@
 <header-component></header-component>
 
 <div class="container" style="overflow-x:auto;">
- <table>
-   <thead>
-     <tr>
-      <th data-type="numeric">Código
-        <span class="resize-handle"></span>
-      </th>
-      <th data-type="text-short">Nome
-        <span class="resize-handle"></span>
-      </th>
-      <th data-type="text-short">E-mail
-        <span class="resize-handle"></span>
-      </th>
-      <th data-type="text-short">Status
-        <span class="resize-handle"></span>
-      </th>
-      <th data-type="text-short">Criado em
-        <span class="resize-handle"></span>
-      </th>
-      <th data-type="text-short">Ações
-      </th>
-     </tr>
-   </thead>
-   <tbody>
-       <tr *ngFor="let user of users" (dblclick)="doubleClick(user)">
-        <td>{{user.id}}</td>
-          <td style="text-transform: uppercase;">{{user.name}}</td>
-          <td>{{user.email}}</td>
-          <td [ngClass]="user.active ? 'statusActive' : 'statusInative'">{{isStatusActive(user)}}</td>
-          <td >{{user.dateAtCreate}}</td>
-          <td>
-            <!--colocal tooltip-->
-            <a class="linkEdit" routerLink="update/{{user.id}}">
-              <mat-icon class="ripple"  color="accent">edit</mat-icon>
-            </a>
-             <!--colocal tooltip-->
-            <a (click)="deleteUser(user)">
-              <mat-icon color="warn">delete</mat-icon>
-            </a>
-          </td>
-     </tr>
-   </tbody>
- </table>
+  <div class="content">
+    <table>
+      <thead>
+        <tr>
+         <th data-type="numeric">Código
+           <span class="resize-handle"></span>
+         </th>
+         <th data-type="text-short">Nome
+           <span class="resize-handle"></span>
+         </th>
+         <th data-type="text-short">E-mail
+           <span class="resize-handle"></span>
+         </th>
+         <th data-type="text-short">Status
+           <span class="resize-handle"></span>
+         </th>
+         <th data-type="text-short">Criado em
+           <span class="resize-handle"></span>
+         </th>
+         <th data-type="text-short">Ações
+         </th>
+        </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let user of users" (dblclick)="doubleClick(user)">
+           <td>{{user.id}}</td>
+             <td style="text-transform: uppercase;">{{user.name}}</td>
+             <td>{{user.email}}</td>
+             <td [ngClass]="user.active ? 'statusActive' : 'statusInative'">{{isStatusActive(user)}}</td>
+             <td >{{user.dateAtCreate}}</td>
+             <td>
+               <!--colocal tooltip-->
+               <a class="linkEdit" routerLink="update/{{user.id}}">
+                 <mat-icon class="ripple"  color="accent">edit</mat-icon>
+               </a>
+                <!--colocal tooltip-->
+               <a (click)="deleteUser(user)">
+                 <mat-icon color="warn">delete</mat-icon>
+               </a>
+             </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
  <div class="noRegisterData" *ngIf="(users?.length === 0 || null)">
    <strong>Sem registros gravados!!!</strong>
  </div>
